--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
-.App {
-  text-align: center;
+.product-container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.product-card{
+    width: 20%;
+    padding: 20px;
+    margin: 20px;
+    border: 1px solid hsl(0, 0%, 76%);
+    border-radius: 6px;
+    display: flex;
+    flex-direction: column;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.product-description{
+    margin: 20px 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.product-card .name{
+    font-size: 20px;
+    color: #2f2e41;
+    margin-bottom: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.product-card button{
+    width: 100%;
+    padding: 7px 10px;
+    background: #9f80d0;
+    border: 1px solid #9f80d0;
+    border-radius: 6px;
+    color: #fff;
+    font-size: 14px;
+    cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav{
+    display: flex;
+    justify-content:space-evenly;
+    background-color: #9f80d0;
+    color: #fff;
+    font-size: 18px;
+    padding: 20px 0;
+}
+
+.heading{
+    font-size: 35px;
+    text-align: center;
+    padding: 20px 0;
+}
+
+li{
+    list-style: none;
+}
+
+a{
+    text-decoration: none;
+    color: #fff;
 }
